Lock page body on mobile menu open [fixes #159866063]

--- a/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
+++ b/app/assets/stylesheets/spree/frontend/_mobile_navbar.sass
@@ -1,3 +1,6 @@
+body.mobile-menu-open
+  position: fixed
+
 .mobile-menu-btn
   cursor: pointer
   padding: 0 7.5px
@@ -12,6 +15,7 @@
 
   & ~ .backdrop
     display: block
+    background-color: rgba(0, 0, 0, .5)
     left: 0
     top: 0
     width: 100%
